--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <section id="inputs">
+            <p>Parametros de entrada</p>
+            <div>
+                <label for="">Resolução do grid</label>
+                <input type="number" id="step" placeholder="Passo">
+            </div>
+            <div>
+                <label for="">Frequencia da portadora</label>
+                <input type="number" id="frequency" placeholder="Frequência da portadora (MHz)">
+            </div>
+            <div>
+                <label for="">Raio</label>
+                <input type="number" id="radius" placeholder="Raio do hexagono (m)"> 
+            </div>
+            <div>
+                <label for="">potencia de transmissão</label>
+                <input type="number" id="potencia" placeholder="Potência de transmissão (dBm)">
+            </div>
+            <button id="calculateReceivedPower">Calcular potencia</button>
+            <button id="showAutageArea">Ver area de autage</button>
+            <button id="add-microcelula"></button>
+        </section>    
+        <section id="results">
+            <div id="macrocelula"></div>
+            <div id="microcelula">
+            </div>
+        </section>
+    </div>
+    <div id="results-region">
+        <section id="power-graph"></section>
+        <section id="autage-graph"></section>
+    </div>
 </body>
 </html>
