--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="display: flex; flex-direction: row;">
+    <div style="display: flex; flex-direction: row; width: 100%;justify-content: space-evenly;">
         <section id="inputs">
             <p>Parametros de entrada</p>
             <div>
@@ -29,8 +29,7 @@
             </div>
             <button id="calculateReceivedPower">Calcular potencia</button>
             <button id="showOutageArea">Ver area de outage </button>
-            <button id="add-microcelula" style="display: none;"></button>
-            <button id="delet-all-microcelula" style="display: none;"></button>
+            <button id="show-microcelula" style="display: block;">Microcélulas</button>
         </section>    
         <section id="results">
             <p>Taxa de outage</p>
@@ -42,9 +41,50 @@
             </div>
         </section>
     </div>
-    <div id="results-region" style="display: flex; flex-direction: row;">
+    <div id="results-region" style="display: flex; flex-direction: row;  width: 100%;justify-content: space-evenly;">
         <section id="macrocelula-graphic" style="display: none;"></section>
         <section id="microcelula-graphic" style="display: none;"></section>
+    </div>
+    <!-- -modal que controla as microcelulas adicionadas (nele é possível adicionar uma nova, deletar uma existente e deletar todas...) -->
+    <div id="hidden" style="display: none; width: 100%; height: 100%; position: absolute; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.5); z-index: 9999;">
+        <div id="modal" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); width: 50%; height: 95%;">
+            <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; width: 100%; height: 10%;">
+                <div style="margin: 0 40%;">Microcélulas</div>
+                <div id="close" style="cursor: pointer;padding: 20px;">X</div>
+            </div>
+            <div>
+                <!-- -confirmar quais os inputs necessários -->
+                <!-- <div>
+                    <label for="">Altura da antena</label>
+                    <input type="number" id="height" placeholder="Altura da microcelula (m)">
+                </div>
+                <div>
+                    <label for="">Frequencia da portadora</label>
+                    <input type="number" id="frequency-micro" placeholder="Frequência da portadora (MHz)">
+                </div>
+                <div>
+                    <label for="">Raio</label>
+                    <input type="number" id="radius-micro" placeholder="Raio do hexagono (m)"> 
+                </div>
+                <div>
+                    <label for="">potencia de transmissão</label>
+                    <input type="number" id="potencia-micro" placeholder="Potência de transmissão (dBm)">
+                </div> -->
+                <div>
+                    <label for="">posição no eixo x</label>
+                    <input type="number" id="position-x" placeholder="posição em metros">
+                </div>
+                <div>
+                    <label for="">posição no eixo y</label>
+                    <input type="number" id="position-y" placeholder="posição em metros">
+                </div>
+                <button id="add-microcelula">Adicionar Microcélula</button>
+            </div>
+            <button id="delet-all-microcelula" style="display: none;"> Deletar todas as microcélulas</button>
+            <div id="added-microcelula">
+                <!-- -cards de microcelulas serão adicionados via js. Lembrar de por um scroll aqui tbm -->
+            </div>
+        </div>
     </div>
 </body>
 <script type="module" src="module/index.js"></script>
