adição do gáfico de outage e limpeza de logs

--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,9 @@
         </section>
     </div>
     <div id="results-region" style="display: flex; flex-direction: row;  width: 100%;justify-content: space-evenly;">
-        <section id="power-graphic" style="display: none;max-width: 994px;"></section>
-        <section id="power-graphic-static" style="display: none;max-width: 994px;"></section>
+        <section id="power-graphic" style="display: none;"></section>
+        <section id="power-graphic-static" style="display: none;"></section>
+        <section id="outage-graphic" style="display:flex ;"></section>
     </div>
     <!-- -modal que controla as microcelulas adicionadas (nele é possível adicionar uma nova, deletar uma existente e deletar todas...) -->
     <div id="hidden" style="display: none; width: 100%; height: 100%; position: absolute; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.5); z-index: 9999;">
