--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
                 <input type="number" id="step" placeholder="Passo">
             </div>
             <div>
-                <label for="">Frequencia da portadora</label>
+                <label for="">Frequência da portadora</label>
                 <input type="number" id="frequency" placeholder="Frequência da portadora (MHz)">
             </div>
             <div>
@@ -24,22 +24,26 @@
                 <input type="number" id="radius" placeholder="Raio do hexagono (m)"> 
             </div>
             <div>
-                <label for="">potencia de transmissão</label>
+                <label for="">Potência de transmissão</label>
                 <input type="number" id="power" placeholder="Potência de transmissão (dBm)">
             </div>
-            <button id="calculateReceivedPower">Calcular potencia</button>
-            <button id="viewReceivedPower" >Ver gráfico de potência sem Microcélulas</button>
-            <button id="show-microcelula" disabled style="display: block;">Microcélulas</button>
         </section>    
-        <section id="results">
-            <p>Taxa de outage</p>
-            <div id="macrocelula" style="display: none;">
-                <p >Macrocelula: <span id="result-outage-macrocelula"></span>%</p>
-            </div>
-            <div id="microcelula" style="display: none;">
-                <p>Microcelula: <span id="result-outage-microcelula"></span>%</p>
-            </div>
-        </section>
+        <div style="width: 100%; max-width: 994px;">
+            <section id="buttons">
+                <button id="calculateReceivedPower">Calcular potencia</button>
+                <button id="show-microcelula" disabled style="display: block;">Microcélulas</button>
+                <button id="viewReceivedPower" >Ver gráfico de potência sem Microcélulas</button>
+            </section>
+            <section id="results">
+                <p>Taxa de outage</p>
+                <div id="macrocelula" style="display: none;">
+                    <p style="text-align: left;">Taxa de outage sem microcélulas: <span id="result-outage-macrocelula"></span>%</p>
+                </div>
+                <div id="microcelula" style="display: none;">
+                    <p style="text-align: left;">Taxa de outage com microcélulas: <span id="result-outage-microcelula"></span>%</p>
+                </div>
+            </section>
+        </div>
     </div>
     <div id="results-region" style="display: flex; flex-direction: column;  width: 100%;justify-content: space-evenly;">
         <div style="display: flex;flex-direction: row;">
@@ -51,41 +55,28 @@
     <!-- -modal que controla as microcelulas adicionadas (nele é possível adicionar uma nova, deletar uma existente e deletar todas...) -->
     <div id="hidden" style="display: none; width: 100%; height: 100%; position: absolute; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.5); z-index: 9999;">
         <div id="modal" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); width: 50%; height: 95%;">
-            <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; width: 100%; height: 10%;">
-                <div style="margin: 0 40%;">Microcélulas</div>
+            <div style="display: flex; flex-direction: row; align-items: center; width: 100%; height: 10%;">
+                <div style="display: flex;justify-content: center; width: 100%;">Microcélulas</div>
                 <div id="close" style="cursor: pointer;padding: 20px;">X</div>
             </div>
             <div>
-                <!-- -confirmar quais os inputs necessários -->
-                <!-- <div>
-                    <label for="">Altura da antena</label>
-                    <input type="number" id="height" placeholder="Altura da microcelula (m)">
-                </div>
                 <div>
-                    <label for="">Frequencia da portadora</label>
-                    <input type="number" id="frequency-micro" placeholder="Frequência da portadora (MHz)">
-                </div>
-                <div>
-                    <label for="">Raio</label>
-                    <input type="number" id="radius-micro" placeholder="Raio do hexagono (m)"> 
-                </div> -->
-                <div>
-                    <label for="">potencia de transmissão</label>
+                    <label for="">Potência de transmissão</label>
                     <input type="number" id="power-micro" placeholder="Potência de transmissão (dBm)">
                 </div>
                 <div>
-                    <label for="">posição no eixo x</label>
-                    <input type="number" id="position-x" placeholder="posição em metros">
+                    <label for="">Posição no eixo x</label>
+                    <input type="number" id="position-x" placeholder="Posição em metros">
                 </div>
                 <div>
-                    <label for="">posição no eixo y</label>
-                    <input type="number" id="position-y" placeholder="posição em metros">
+                    <label for="">Posição no eixo y</label>
+                    <input type="number" id="position-y" placeholder="Posição em metros">
                 </div>
                 <p id="error-micro" class="error"></p>
                 <button id="add-microcelula">Adicionar Microcélula</button>
             </div>
             <button id="delet-all-microcelula" style="display: none;"> Deletar todas as microcélulas</button>
-            <div id="added-microcelula" style="max-height: 60%; overflow-y: auto; margin-top: 20px;">
+            <div id="added-microcelula" style="max-height: 45%; overflow-y: auto; margin-top: 20px;">
                 <!-- -cards de microcelulas serão adicionados via js -->
             </div>
         </div>
